--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,22 +7,24 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.3",
     "jquery": "^3.5.1",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.32",
     "react": "^17.0.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.4.0",
+    "react-dayjs": "^0.2.1",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
-    "react-moment": "^1.1.1",
     "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
+    "react-select": "^3.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
