take the case button

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "LexiConsultas",
   "proxy": "http://127.0.0.1:5000",
   "version": "1.0.0",
   "private": true,
