--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LegalConsult",
+  "name": "LexiConsultasAPI",
   "version": "1.0.0",
   "description": "Consultas legales",
   "main": "server.js",
