--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.13.0",
+    "sweetalert2-react-content": "^3.2.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
