--- a/LexiConsultasApp/android/settings.gradle
+++ b/LexiConsultasApp/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'LexiConsultasApp'
+include ':react-native-sweet-alert'
+project(':react-native-sweet-alert').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sweet-alert/android')
 include ':react-native-gesture-handler'
 project(':react-native-gesture-handler').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-gesture-handler/android')
 include ':react-native-vector-icons'
