--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "bootstrap": "5.0.0-beta1",
+    "bulma": "^0.9.2",
     "chartist": "^0.11.4",
     "chartist-plugin-tooltips-updated": "^0.1.4",
     "dayjs": "^1.10.3",
@@ -25,6 +26,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
+    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dayjs": "^0.2.1",
     "react-dom": "^17.0.1",
